--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </style>
     </head>
     
-    <body onload="info()">
+    <body>
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
         <script>
@@ -13,13 +13,6 @@
 var scl = 20;
 var food;
 var score = 0;
-
-function info() {
-    alert("This game requires a keyboard. A mobile-friendly version may be released at a later time.");
-    alert("Use A W S D to move. Made while going along Daniel Shiffman's Coding video on The Coding Train.");
-    alert("Made with p5.js");
-    alert("Please enjoy!");
-}
 
 function setup() {
     createCanvas(600, 400);
